manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kheng-sovannak1578-nakblogwebsites-https-ingress
  namespace: kheng-sovannak1578-nakblogwebsites
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - kheng-sovannak1578-nakblogwebsites.assessify.org
      secretName: kheng-sovannak1578-nakblogwebsites-secret-tls
  rules:
    - host: kheng-sovannak1578-nakblogwebsites.assessify.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kheng-sovannak1578-nakblogwebsites-service
                port:
                  number: 8234
